compiler/e2e/test/snapshot/borrow_checker/variable_does_not_live_long_enough_in_loop/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the variable doesn't live long enough
  ╭─ compiler/e2e/test/snapshot/borrow_checker/variable_does_not_live_long_enough_in_loop/main.pnx:6:13
  │
6 │         let inner = 0
  │             ^^^^^ the variable declared here doesn't live long enough
7 │         numberRef = &inner
  │                     ------ the borrow starts here
8 │     
9 │     let a = *numberRef
  │             ---------- the borrow is used here

error: Compilation aborted due to 1 error(s)



stdout:
